--- a/CustomerWebServiceApp/src/main/resources/application.properties
+++ b/CustomerWebServiceApp/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://192.168.99.100:3306/db_example
 spring.datasource.username=springuser
 spring.datasource.password=banane
+spring.application.name=customerwebservice
