--- a/CatalogWebServicesBancaditalia/src/main/resources/application.properties
+++ b/CatalogWebServicesBancaditalia/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://192.168.99.100:3306/db_example
-spring.datasource.username=springuser
-spring.datasource.password=banane
+spring.datasource.username=xxxxx
+spring.datasource.password=xxxxxxxxxxxxx
 
 management.endpoints.web.exposure.include=*
 
