--- a/CustomerWebServiceApp/src/main/resources/application.properties
+++ b/CustomerWebServiceApp/src/main/resources/application.properties
@@ -3,6 +3,6 @@ server.servlet.contextPath=/movieondemand
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://192.168.99.100:3306/db_example
-spring.datasource.username=xxxxxxxxxxxxxxxx
-spring.datasource.password=xxxxxxxxxxxxxxxxxx
+spring.datasource.username=springuser
+spring.datasource.password=banane
 spring.application.name=customerwebservice
